fixed: fixed section about-company

--- a/index.html
+++ b/index.html
@@ -1,210 +1,251 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ООО "СИГМА"- Микросейсмические исследования скважин</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <div class="header-container">
-            <a href="index.html" class="header__link">
-                <img class="header__logo" src="img/logo-blue.svg" alt="logo" />
-            </a>
+      <div class="header-container">
+        <a href="index.html" class="header__link">
+          <img class="header__logo" src="img/logo-blue.svg" alt="logo" />
+        </a>
 
-            <nav class="navbar">
-                <ul class="navbar__list">
-                    <li class="navbar__item">
-                        <a href="index.html" class="navbar__link">Главная</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="about-company.html" class="navbar__link">О компании</a>
-                    </li>
-                    <li class="navbar__item navbar__item--click">
-                        <a href="method-msi.html" class="navbar__link">Наши технологии</a>
-                        <div class="dropdown">
-                            <a href="#" class="dropdown__link">Мониторинг СЭТ на малых площадях</a
+        <nav class="navbar">
+          <ul class="navbar__list">
+            <li class="navbar__item">
+              <a href="index.html" class="navbar__link">Главная</a>
+            </li>
+            <li class="navbar__item">
+              <a href="about-company.html" class="navbar__link">О компании</a>
+            </li>
+            <li class="navbar__item navbar__item--click">
+              <a href="method-msi.html" class="navbar__link">Наши технологии</a>
+              <div class="dropdown">
+                <a href="#" class="dropdown__link"
+                  >Мониторинг СЭТ на малых площадях</a
                 >
                 <a href="#" class="dropdown__link"
                   >Мониторинг естественной трещиноватости</a
                 >
                 <a href="#" class="dropdown__link">Мониторинг СВАН</a>
-                        </div>
-                    </li>
+              </div>
+            </li>
 
-                    <li class="navbar__item">
-                        <a href="contacts.html" class="navbar__link">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
+            <li class="navbar__item">
+              <a href="contacts.html" class="navbar__link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
 
-            <button class="menu-button">
+        <button class="menu-button">
           <span class="menu-button__line"></span>
           <span class="menu-button__line"></span>
           <span class="menu-button__line"></span>
         </button>
-        </div>
+      </div>
     </header>
     <!--.header-->
 
     <section class="hero">
-        <div class="hero-container">
-            <div class="hero__wrapper">
-                <h1 class="hero__title">
-                    Микросейсмические исследования нефтегазоносности геологических объектов
-                </h1>
-                <span class="hero__span">Геофизическая компания, с 2014 года</span>
-            </div>
+      <div class="hero-container">
+        <div class="hero__wrapper">
+          <h1 class="hero__title">
+            Микросейсмические исследования нефтегазоносности геологических
+            объектов
+          </h1>
+          <span class="hero__span">Геофизическая компания, с 2014 года</span>
         </div>
+      </div>
     </section>
     <!--.hero-->
 
     <section class="about">
-        <div class="about-container">
-            <div class="about__wrapper">
-                <div class="about__image">
-                    <img src="img/about-oilfield.png" alt="well" />
-                </div>
-                <div class="about__description">
-                    <h2 class="about__title">О СИГМЕ</h2>
+      <div class="about-container">
+        <div class="about__wrapper">
+          <div class="about__image">
+            <img src="img/about-oilfield.png" alt="well" />
+          </div>
+          <div class="about__description">
+            <h2 class="about__title">О СИГМЕ</h2>
 
-                    <p class="about__text">
-                        На основании отечественного и зарубежного опыта наша компания разработала свой уникальный методологический подход в решении задач по поиску, разведке и уточнению геологических границ месторождений и залежей нефти и газа, а также повышения эффективности
-                        разработки продуктивных пластов для решения технологических задач нефтегазовой отрасли на основе комплексного анализа геологической среды при проведении сейсмометрического мониторинга.
-                    </p>
+            <p class="about__text">
+              На основании отечественного и зарубежного опыта наша компания
+              разработала свой уникальный методологический подход в решении
+              задач по поиску, разведке и уточнению геологических границ
+              месторождений и залежей нефти и газа, а также повышения
+              эффективности разработки продуктивных пластов для решения
+              технологических задач нефтегазовой отрасли на основе комплексного
+              анализа геологической среды при проведении сейсмометрического
+              мониторинга.
+            </p>
 
-                    <br />
+            <br />
 
-                    <a href="#" class="about__button">Подробнее</a>
-                </div>
-            </div>
+            <a href="#" class="about__button">Подробнее</a>
+          </div>
         </div>
+      </div>
     </section>
     <!--.about-->
 
     <section class="subscribe" id="contacts">
-        <div class="subscribe-container">
-            <h3 class="subscribe__title">Мы всегда открыты к сотрудничеству!</h3>
-            <a href="# " class="subscribe__link">СВЯЗАТЬСЯ С НАМИ</a>
-        </div>
+      <div class="subscribe-container">
+        <h3 class="subscribe__title">Мы всегда открыты к сотрудничеству!</h3>
+        <a href="# " class="subscribe__link">СВЯЗАТЬСЯ С НАМИ</a>
+      </div>
     </section>
     <!--.subscribe-->
 
     <section class="methods">
-        <h3 class="methods__title">Наши методы</h3>
+      <h3 class="methods__title">Наши методы</h3>
 
-        <!-- Slider main container -->
-        <div class="swiper-container methods-container">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper methods-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide methods-slide">
-                    <div class="methods__image-wrapper">
-                        <img src="img/methods.png" alt="" />
-                    </div>
-                    <div class="methods__text-wrapper">
-                        <h3 class="methods__text-title">
-                            Мониторинг СЭТ на малых площадях
-                        </h3>
-                        <p class="methods__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aperiam hic obcaecati quidem debitis magni fugiat provident repellendus nisi doloribus animi qui ipsam, omnis, ullam sapiente, quibusdam ducimus reiciendis asperiores odio? Dolores repudiandae
-                            ratione consequatur tenetur error vero quo asperiores fugiat corporis deleniti, dolorum eaque saepe quod. Quam, delectus a?
-                        </p>
-                        <a href="#" class="methods__button">Подробнее</a>
-                    </div>
-                </div>
-                <div class="swiper-slide methods-slide">
-                    <div class="methods__image-wrapper">
-                        <img src="img/methods.png" alt="" />
-                    </div>
-                    <div class="methods__text-wrapper">
-                        <h3 class="methods__text-title">
-                            Мониторинг естественной трещиноватости
-                        </h3>
-                        <p class="methods__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aperiam hic obcaecati quidem debitis magni fugiat provident repellendus nisi doloribus animi qui ipsam, omnis, ullam sapiente, quibusdam ducimus reiciendis asperiores odio? Dolores repudiandae
-                            ratione consequatur tenetur error vero quo asperiores fugiat corporis deleniti, dolorum eaque saepe quod. Quam, delectus a?
-                        </p>
-                        <a href="#" class="methods__button">Подробнее</a>
-                    </div>
-                </div>
-                <div class="swiper-slide methods-slide">
-                    <div class="methods__image-wrapper">
-                        <img src="img/methods.png" alt="" />
-                    </div>
-                    <div class="methods__text-wrapper">
-                        <h3 class="methods__text-title">Мониторинг СВАН</h3>
-                        <p class="methods__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aperiam hic obcaecati quidem debitis magni fugiat provident repellendus nisi doloribus animi qui ipsam, omnis, ullam sapiente, quibusdam ducimus reiciendis asperiores odio? Dolores repudiandae
-                            ratione consequatur tenetur error vero quo asperiores fugiat corporis deleniti, dolorum eaque saepe quod. Quam, delectus a?
-                        </p>
-                        <a href="#" class="methods__button">Подробнее</a>
-                    </div>
-                </div>
+      <!-- Slider main container -->
+      <div class="swiper-container methods-container">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper methods-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide methods-slide">
+            <div class="methods__image-wrapper">
+              <img src="img/methods.png" alt="" />
             </div>
-
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-
-            <!-- If we need scrollbar -->
-            <div class="swiper-scrollbar"></div>
+            <div class="methods__text-wrapper">
+              <h3 class="methods__text-title">
+                Мониторинг СЭТ на малых площадях
+              </h3>
+              <p class="methods__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                aperiam hic obcaecati quidem debitis magni fugiat provident
+                repellendus nisi doloribus animi qui ipsam, omnis, ullam
+                sapiente, quibusdam ducimus reiciendis asperiores odio? Dolores
+                repudiandae ratione consequatur tenetur error vero quo
+                asperiores fugiat corporis deleniti, dolorum eaque saepe quod.
+                Quam, delectus a?
+              </p>
+              <a href="#" class="methods__button">Подробнее</a>
+            </div>
+          </div>
+          <div class="swiper-slide methods-slide">
+            <div class="methods__image-wrapper">
+              <img src="img/methods.png" alt="" />
+            </div>
+            <div class="methods__text-wrapper">
+              <h3 class="methods__text-title">
+                Мониторинг естественной трещиноватости
+              </h3>
+              <p class="methods__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                aperiam hic obcaecati quidem debitis magni fugiat provident
+                repellendus nisi doloribus animi qui ipsam, omnis, ullam
+                sapiente, quibusdam ducimus reiciendis asperiores odio? Dolores
+                repudiandae ratione consequatur tenetur error vero quo
+                asperiores fugiat corporis deleniti, dolorum eaque saepe quod.
+                Quam, delectus a?
+              </p>
+              <a href="#" class="methods__button">Подробнее</a>
+            </div>
+          </div>
+          <div class="swiper-slide methods-slide">
+            <div class="methods__image-wrapper">
+              <img src="img/methods.png" alt="" />
+            </div>
+            <div class="methods__text-wrapper">
+              <h3 class="methods__text-title">Мониторинг СВАН</h3>
+              <p class="methods__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                aperiam hic obcaecati quidem debitis magni fugiat provident
+                repellendus nisi doloribus animi qui ipsam, omnis, ullam
+                sapiente, quibusdam ducimus reiciendis asperiores odio? Dolores
+                repudiandae ratione consequatur tenetur error vero quo
+                asperiores fugiat corporis deleniti, dolorum eaque saepe quod.
+                Quam, delectus a?
+              </p>
+              <a href="#" class="methods__button">Подробнее</a>
+            </div>
+          </div>
         </div>
+
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+
+        <!-- If we need scrollbar -->
+        <!-- <div class="swiper-scrollbar"></div> -->
+      </div>
     </section>
     <!--.methods-->
 
     <section class="geography">
-        <div class="geography-container">
-            <h3 class="geography__title">ГЕОГРАФИЯ ДЕЯТЕЛЬНОСТИ</h3>
-            <div class="geography-wrapper">
-                <img src="img/geography-bg-2.png " alt=" " />
-                <div class="geography__map-container geography__map-container--komi">
-                    <a href="# " class="geography__map-link">
-                        <img src="img/geography-map-icon.svg " class="geography__map-icon" alt=" " />
-                    </a>
-                    <div class="geography__map-modal">
-                        <h3 class="geography__modal-title">ООО "Газпром "</h3>
-                    </div>
-                </div>
-                <div class="geography__map-container geography__map-container--sahalin">
-                    <a href="# " class="geography__map-link">
-                        <img src="img/geography-map-icon.svg " class="geography__map-icon" alt=" " />
-                    </a>
-                    <div class="geography__map-modal">
-                        <h3 class="geography__modal-title">ООО "Роснефть "</h3>
-                    </div>
-                </div>
+      <div class="geography-container">
+        <h3 class="geography__title">ГЕОГРАФИЯ ДЕЯТЕЛЬНОСТИ</h3>
+        <div class="geography-wrapper">
+          <img src="img/geography-bg-2.png " alt=" " />
+          <div class="geography__map-container geography__map-container--komi">
+            <a href="# " class="geography__map-link">
+              <img
+                src="img/geography-map-icon.svg "
+                class="geography__map-icon"
+                alt=" "
+              />
+            </a>
+            <div class="geography__map-modal">
+              <h3 class="geography__modal-title">ООО "Газпром "</h3>
             </div>
+          </div>
+          <div
+            class="geography__map-container geography__map-container--sahalin"
+          >
+            <a href="# " class="geography__map-link">
+              <img
+                src="img/geography-map-icon.svg "
+                class="geography__map-icon"
+                alt=" "
+              />
+            </a>
+            <div class="geography__map-modal">
+              <h3 class="geography__modal-title">ООО "Роснефть "</h3>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
     <!--.geography-->
 
     <footer class="footer">
-        <div class="footer-container">
-            <div class="footer__menu">
-                <div class="footer__nav">
-                    <div class="footer__menu-group">
-                        <h3 class="footer__title footer__info--title">Компания</h3>
-                        <a href="# " class="footer__info footer__info--link">
-                            <img class="footer__logo" src="img/logo-white.svg " alt=" " />
-                        </a>
-                        <span class="footer__text">
+      <div class="footer-container">
+        <div class="footer__menu">
+          <div class="footer__nav">
+            <div class="footer__menu-group">
+              <h3 class="footer__title footer__info--title">Компания</h3>
+              <a href="# " class="footer__info footer__info--link">
+                <img class="footer__logo" src="img/logo-white.svg " alt=" " />
+              </a>
+              <span class="footer__text">
                 ООО "СИГМА " — геофизическая компания, специализирующаяся на
                 проведении комплекса сервисных работ для нефтегазодобывающих
                 компаний.</span
