fixed: added section company

--- a/contacts.html
+++ b/contacts.html
@@ -34,7 +34,7 @@
                         <a href="about-company.html" class="navbar__link">О компании</a>
                     </li>
                     <li class="navbar__item">
-                        <a href="method-msi.html" class="navbar__link">Наши технологии</a>
+                        <a href="technologies.html" class="navbar__link">Наши технологии</a>
                     </li>
 
                     <li class="navbar__item">
