--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
             <li class="navbar__item">
               <a href="about-company.html" class="navbar__link">О компании</a>
             </li>
-            <li class="navbar__item navbar__item--click">
-              <a href="method-msi.html" class="navbar__link">Наши технологии</a>
+            <li class="navbar__item">
+              <a href="technologies.html" class="navbar__link"
+                >Наши технологии</a
+              >
               <div class="dropdown">
                 <a href="#" class="dropdown__link"
                   >Мониторинг СЭТ на малых площадях</a
@@ -187,10 +189,10 @@
           </div>
         </div>
 
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
+        <!-- If we need pagination
+        <div class="swiper-pagination"></div> -->
 
-        <!-- If we need navigation buttons -->
+        If we need navigation buttons
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
 
