--- a/technologies.html
+++ b/technologies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>О "СИГМЕ"</title>
+    <title>Наши технологии</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
@@ -80,80 +80,6 @@
       <!-- /.container -->
     </nav>
     <!-- /.breadcrumb-->
-
-    <section class="company">
-      <div class="company-container">
-        <div class="company__wrapper">
-          <div class="company__image-wrapper">
-            <img src="img/main-info__img-1.jpg" alt="" class="company__image" />
-          </div>
-          <div class="company__image-wrapper">
-            <img src="img/main-info__img-2.jpg" alt="" class="company__image" />
-          </div>
-          <div class="company__text-wrapper">
-            <h3 class="company__title">О компании</h3>
-            <p class="company__text">
-              Компания <span class="company__bold">ООО "СИГМА"</span> на
-              основании отечественного и зарубежного опыта разработала свой
-              уникальный методологический подход в решении задач по поиску,
-              разведке и уточнению геологических границ месторождений и залежей
-              нефти и газа, а также повышения эффективности разработки
-              продуктивных пластов для решения технологических задач
-              нефтегазовой отрасли на основе комплексного анализа геологической
-              среды при проведении сейсмометрического мониторинга.
-            </p>
-          </div>
-        </div>
-        <div class="company__info">
-          <p class="company__text">
-            ООО «СИГМА» — ведущая компания в области сейсморазведки на суше и в
-            транзитной зоне, оказывающая услуги клиентам во всех основных
-            нефтегазоносных областях Российской Федерации (Западная и Восточная
-            Сибирь, Тимано-Печорская и Волго-Уральская провинции) и в Республике
-            Казахстан. <br />
-            <br />
-            Компания является системообразующим предприятием для геологической
-            отрасли России и вносит значительный вклад в реализацию
-            государственной программы по воспроизводству минерально-сырьевой
-            базы России в нефтегазовом секторе. <br />
-            <br />
-            Заказчиками СИГМЫ являются: ПАО «НК «Роснефть», ПАО «Газпром», ПАО
-            «Газпром нефть», ПАО «ЛУКОЙЛ», ПАО «НОВАТЭК», ПАО «Сургутнефтегаз»,
-            ПАО АНК «Башнефть», ООО «Иркутская нефтяная компания», ООО «РИТЭК»,
-            АО "Зарубежнефть" и другие.
-            <br />
-            Директор и основатель компании - Михайлов Сергей Александрович.
-          </p>
-        </div>
-        <div class="company__images-wrapper">
-          <img class="company__images" src="img/company_img-1.jpg" alt="" />
-        </div>
-        <div class="company__description">
-          <p class="company__text">
-            Наша компания специализируется на проведении комплекса сервисных
-            работ для нефтегазодобывающих компаний:
-          </p>
-          <ul class="company__list">
-            <li class="company__item">поиск новых запасов;</li>
-            <li class="company__item">
-              стимулирование разработки трудноизвлекаемых запасов нефти и газа;
-            </li>
-            <li class="company__item">
-              геологический аудит месторождений нефти и газа;
-            </li>
-            <li class="company__item">
-              мониторинг разработки нефтегазовых месторождений;
-            </li>
-            <li class="company__item">
-              увеличение эффективности геолого-технических мероприятий;
-            </li>
-            <li class="company__item">
-              разработка и производство геофизического оборудования.
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
 
     <footer class="footer">
       <div class="footer-container">
