--- a/method-svan.html
+++ b/method-svan.html
@@ -34,7 +34,7 @@
                         <a href="about-company.html" class="navbar__link">О компании</a>
                     </li>
                     <li class="navbar__item">
-                        <a href="#" class="navbar__link navbar__link">Наши технологии</a>
+                        <a href="technologies.html" class="navbar__link navbar__link">Наши технологии</a>
                     </li>
 
                     <li class="navbar__item">
