create: added section technologies

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <section class="subscribe" id="contacts">
       <div class="subscribe-container">
         <h3 class="subscribe__title">Мы всегда открыты к сотрудничеству!</h3>
-        <a href="# " class="subscribe__link">СВЯЗАТЬСЯ С НАМИ</a>
+        <a href="contacts.html" class="subscribe__link">СВЯЗАТЬСЯ С НАМИ</a>
       </div>
     </section>
     <!--.subscribe-->
