--- a/technologies.html
+++ b/technologies.html
@@ -85,7 +85,7 @@
       <div class="technologies-container">
         <h3 class="technologies__title">Наши технологии
         </h3>
-        <div class="technologies__images-wrapper">
+        <div class="technologies__main-wrapper">
           <img class="technologies__image" src="img/technologies_img-1.jpg" alt="">
         </div>
         <p class="technologies__text">ООО "СИГМА" предоставляет полный комплекс геологоразведочных услуг, обусловленный независимым вкладом 3 составляющих факторов: 
@@ -95,6 +95,16 @@
           <p class="technologies__text">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam, error dolor consequuntur ullam eveniet recusandae hic fuga. Odit dicta velit veritatis a eligendi culpa officiis quasi beatae, dolorem at, quae cum corporis non esse. Neque adipisci praesentium, culpa inventore vero blanditiis commodi in impedit possimus tempora? Hic, dolore fugit, illo cumque deserunt quasi inventore incidunt minus accusamus pariatur minima sunt iste iure. Quaerat quibusdam labore veritatis voluptate distinctio enim excepturi a accusamus modi provident. Esse tempora, voluptate ut doloremque odit optio id nostrum nam rerum! Culpa nobis maiores, mollitia voluptate ducimus consequatur voluptates corporis, magni sapiente, in dignissimos nemo aperiam!
           </p>
+          <div class="technologies__images-wrapper">
+            <div class="technlogies__image-wrapper">
+              <img class="technologies__image" src="img/technologies_img-3.jpg" alt=""></div>
+            <div class="technlogies__image-wrapper">
+              <img class="technologies__image" src="img/technologies_img-4.jpg" alt=""></div>
+            <div class="technlogies__image-wrapper">
+              <img class="technologies__image" src="img/technologies_img-5.jpg" alt=""></div>
+            
+            
+        </div>
         </div>
         <div class="technologies__info">
           <h5 class="technologies__title--little">Обработка геофизических сигналов</h5>
