fixed: sections geography & navbar

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
             <img src="img/about-oilfield.png" alt="well" />
           </div>
           <div class="about__description">
-            <h2 class="about__title">О СИГМЕ</h2>
+            <h2 class="about__title">О НАС</h2>
 
             <p class="about__text">
-              На основании отечественного и зарубежного опыта наша компания
+              На основании отечественного и зарубежного опыта ООО "СИГМА"
               разработала свой уникальный методологический подход в решении
               задач по поиску, разведке и уточнению геологических границ
               месторождений и залежей нефти и газа, а также повышения
@@ -106,7 +106,7 @@
 
             <br />
 
-            <a href="#" class="about__button">Подробнее</a>
+            <a href="about-company.html" class="about__button">Подробнее</a>
           </div>
         </div>
       </div>
@@ -116,7 +116,7 @@
     <section class="subscribe" id="contacts">
       <div class="subscribe-container">
         <h3 class="subscribe__title">Мы всегда открыты к сотрудничеству!</h3>
-        <a href="contacts.html" class="subscribe__link">СВЯЗАТЬСЯ С НАМИ</a>
+        <a href="contacts.html" class="about__button">Связаться с нами</a>
       </div>
     </section>
     <!--.subscribe-->
@@ -208,6 +208,9 @@
         <div class="geography-wrapper">
           <img src="img/geography-bg-2.png " alt=" " />
           <div class="geography__map-container geography__map-container--komi">
+            <div class="geography__map-modal">
+              <h3 class="geography__modal-title">ООО "Газпром "</h3>
+            </div>
             <a href="# " class="geography__map-link">
               <img
                 src="img/geography-map-icon.svg "
@@ -215,13 +218,13 @@
                 alt=" "
               />
             </a>
-            <div class="geography__map-modal">
-              <h3 class="geography__modal-title">ООО "Газпром "</h3>
-            </div>
           </div>
           <div
             class="geography__map-container geography__map-container--sahalin"
           >
+            <div class="geography__map-modal">
+              <h3 class="geography__modal-title">ООО "Роснефть "</h3>
+            </div>
             <a href="# " class="geography__map-link">
               <img
                 src="img/geography-map-icon.svg "
@@ -229,9 +232,6 @@
                 alt=" "
               />
             </a>
-            <div class="geography__map-modal">
-              <h3 class="geography__modal-title">ООО "Роснефть "</h3>
-            </div>
           </div>
         </div>
       </div>
