--- a/method-grp.html
+++ b/method-grp.html
@@ -25,23 +25,34 @@
                 <img class="header__logo" src="img/logo-blue.svg" alt="logo" />
             </a>
 
-            <nav class="navbar">
-                <ul class="navbar__list">
-                    <li class="navbar__item">
-                        <a href="index.html" class="navbar__link">Главная</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="about-company.html" class="navbar__link">О компании</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="#" class="navbar__link navbar__link">Наши технологии</a>
-                    </li>
+             <nav class="navbar">
+          <ul class="navbar__list">
+            <li class="navbar__item">
+              <a href="index.html" class="navbar__link">Главная</a>
+            </li>
+            <li class="navbar__item">
+              <a href="about-company.html" class="navbar__link">О компании</a>
+            </li>
+            <li class="navbar__item">
+              <a href="technologies.html" class="navbar__link"
+                >Наши технологии</a
+              >
+              <div class="dropdown">
+                <a href="#" class="dropdown__link"
+                  >Мониторинг СЭТ на малых площадях</a
+                >
+                <a href="#" class="dropdown__link"
+                  >Мониторинг естественной трещиноватости</a
+                >
+                <a href="#" class="dropdown__link">Мониторинг СВАН</a>
+              </div>
+            </li>
 
-                    <li class="navbar__item">
-                        <a href="#contacts" class="navbar__link">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
+            <li class="navbar__item">
+              <a href="contacts.html" class="navbar__link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
 
             <button class="menu-button">
           <span class="menu-button__line"></span>
