--- a/method-msi.html
+++ b/method-msi.html
@@ -42,7 +42,18 @@
               <a href="about-company.html" class="navbar__link">О компании</a>
             </li>
             <li class="navbar__item">
-              <a href="technologies.html" class="navbar__link navbar__link">Наши технологии</a>
+              <a href="technologies.html" class="navbar__link"
+                >Наши технологии</a
+              >
+              <div class="dropdown">
+                <a href="#" class="dropdown__link"
+                  >Мониторинг СЭТ на малых площадях</a
+                >
+                <a href="#" class="dropdown__link"
+                  >Мониторинг естественной трещиноватости</a
+                >
+                <a href="#" class="dropdown__link">Мониторинг СВАН</a>
+              </div>
             </li>
 
             <li class="navbar__item">
