--- a/about-company.html
+++ b/about-company.html
@@ -33,7 +33,7 @@
           <img class="header__logo" src="img/logo-blue.svg" alt="logo" />
         </a>
 
-        <nav class="navbar">
+         <nav class="navbar">
           <ul class="navbar__list">
             <li class="navbar__item">
               <a href="index.html" class="navbar__link">Главная</a>
@@ -42,11 +42,18 @@
               <a href="about-company.html" class="navbar__link">О компании</a>
             </li>
             <li class="navbar__item">
-              <a
-                href="technologies.html"
-                class="navbar__link navbar__link--open"
+              <a href="technologies.html" class="navbar__link"
                 >Наши технологии</a
               >
+              <div class="dropdown">
+                <a href="#" class="dropdown__link"
+                  >Мониторинг СЭТ на малых площадях</a
+                >
+                <a href="#" class="dropdown__link"
+                  >Мониторинг естественной трещиноватости</a
+                >
+                <a href="#" class="dropdown__link">Мониторинг СВАН</a>
+              </div>
             </li>
 
             <li class="navbar__item">
