--- a/technologies.html
+++ b/technologies.html
@@ -42,11 +42,18 @@
               <a href="about-company.html" class="navbar__link">О компании</a>
             </li>
             <li class="navbar__item">
-              <a
-                href="technologies.html"
-                class="navbar__link navbar__link--open"
+              <a href="technologies.html" class="navbar__link"
                 >Наши технологии</a
               >
+              <div class="dropdown">
+                <a href="#" class="dropdown__link"
+                  >Мониторинг СЭТ на малых площадях</a
+                >
+                <a href="#" class="dropdown__link"
+                  >Мониторинг естественной трещиноватости</a
+                >
+                <a href="#" class="dropdown__link">Мониторинг СВАН</a>
+              </div>
             </li>
 
             <li class="navbar__item">
@@ -83,39 +90,96 @@
 
     <section class="technologies">
       <div class="technologies-container">
-        <h3 class="technologies__title">Наши технологии
-        </h3>
+        <h3 class="technologies__title">Наши технологии</h3>
         <div class="technologies__main-wrapper">
-          <img class="technologies__image" src="img/technologies_img-1.jpg" alt="">
+          <img
+            class="technologies__image"
+            src="img/technologies_img-1.jpg"
+            alt=""
+          />
         </div>
-        <p class="technologies__text">ООО "СИГМА" предоставляет полный комплекс геологоразведочных услуг, обусловленный независимым вкладом 3 составляющих факторов: 
+        <p class="technologies__text">
+          ООО "СИГМА" предоставляет полный комплекс геологоразведочных услуг,
+          обусловленный независимым вкладом 3 составляющих факторов:
         </p>
         <div class="technologies__info">
-          <h5 class="technologies__title--little">Полевые сейсмические работы</h5>
+          <h5 class="technologies__title--little">
+            Полевые сейсмические работы
+          </h5>
           <p class="technologies__text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam, error dolor consequuntur ullam eveniet recusandae hic fuga. Odit dicta velit veritatis a eligendi culpa officiis quasi beatae, dolorem at, quae cum corporis non esse. Neque adipisci praesentium, culpa inventore vero blanditiis commodi in impedit possimus tempora? Hic, dolore fugit, illo cumque deserunt quasi inventore incidunt minus accusamus pariatur minima sunt iste iure. Quaerat quibusdam labore veritatis voluptate distinctio enim excepturi a accusamus modi provident. Esse tempora, voluptate ut doloremque odit optio id nostrum nam rerum! Culpa nobis maiores, mollitia voluptate ducimus consequatur voluptates corporis, magni sapiente, in dignissimos nemo aperiam!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam,
+            error dolor consequuntur ullam eveniet recusandae hic fuga. Odit
+            dicta velit veritatis a eligendi culpa officiis quasi beatae,
+            dolorem at, quae cum corporis non esse. Neque adipisci praesentium,
+            culpa inventore vero blanditiis commodi in impedit possimus tempora?
+            Hic, dolore fugit, illo cumque deserunt quasi inventore incidunt
+            minus accusamus pariatur minima sunt iste iure. Quaerat quibusdam
+            labore veritatis voluptate distinctio enim excepturi a accusamus
+            modi provident. Esse tempora, voluptate ut doloremque odit optio id
+            nostrum nam rerum! Culpa nobis maiores, mollitia voluptate ducimus
+            consequatur voluptates corporis, magni sapiente, in dignissimos nemo
+            aperiam!
           </p>
           <div class="technologies__images-wrapper">
-            <div class="technlogies__image-wrapper">
-              <img class="technologies__image" src="img/technologies_img-3.jpg" alt=""></div>
-            <div class="technlogies__image-wrapper">
-              <img class="technologies__image" src="img/technologies_img-4.jpg" alt=""></div>
-            <div class="technlogies__image-wrapper">
-              <img class="technologies__image" src="img/technologies_img-5.jpg" alt=""></div>
-            
-            
-        </div>
+            <div class="technologies__image-wrapper">
+              <img
+                class="technologies__image"
+                src="img/technologies_img-3.jpg"
+                alt=""
+              />
+            </div>
+            <div class="technologies__image-wrapper">
+              <img
+                class="technologies__image"
+                src="img/technologies_img-4.jpg"
+                alt=""
+              />
+            </div>
+            <div class="technologies__image-wrapper">
+              <img
+                class="technologies__image"
+                src="img/technologies_img-5.jpg"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
         <div class="technologies__info">
-          <h5 class="technologies__title--little">Обработка геофизических сигналов</h5>
+          <h5 class="technologies__title--little">
+            Обработка геофизических сигналов
+          </h5>
           <p class="technologies__text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam, error dolor consequuntur ullam eveniet recusandae hic fuga. Odit dicta velit veritatis a eligendi culpa officiis quasi beatae, dolorem at, quae cum corporis non esse. Neque adipisci praesentium, culpa inventore vero blanditiis commodi in impedit possimus tempora? Hic, dolore fugit, illo cumque deserunt quasi inventore incidunt minus accusamus pariatur minima sunt iste iure. Quaerat quibusdam labore veritatis voluptate distinctio enim excepturi a accusamus modi provident. Esse tempora, voluptate ut doloremque odit optio id nostrum nam rerum! Culpa nobis maiores, mollitia voluptate ducimus consequatur voluptates corporis, magni sapiente, in dignissimos nemo aperiam!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam,
+            error dolor consequuntur ullam eveniet recusandae hic fuga. Odit
+            dicta velit veritatis a eligendi culpa officiis quasi beatae,
+            dolorem at, quae cum corporis non esse. Neque adipisci praesentium,
+            culpa inventore vero blanditiis commodi in impedit possimus tempora?
+            Hic, dolore fugit, illo cumque deserunt quasi inventore incidunt
+            minus accusamus pariatur minima sunt iste iure. Quaerat quibusdam
+            labore veritatis voluptate distinctio enim excepturi a accusamus
+            modi provident. Esse tempora, voluptate ut doloremque odit optio id
+            nostrum nam rerum! Culpa nobis maiores, mollitia voluptate ducimus
+            consequatur voluptates corporis, magni sapiente, in dignissimos nemo
+            aperiam!
           </p>
         </div>
         <div class="technologies__info">
-          <h5 class="technologies__title--little">Геолого-геофизическая интерпретация</h5>
+          <h5 class="technologies__title--little">
+            Геолого-геофизическая интерпретация
+          </h5>
           <p class="technologies__text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam, error dolor consequuntur ullam eveniet recusandae hic fuga. Odit dicta velit veritatis a eligendi culpa officiis quasi beatae, dolorem at, quae cum corporis non esse. Neque adipisci praesentium, culpa inventore vero blanditiis commodi in impedit possimus tempora? Hic, dolore fugit, illo cumque deserunt quasi inventore incidunt minus accusamus pariatur minima sunt iste iure. Quaerat quibusdam labore veritatis voluptate distinctio enim excepturi a accusamus modi provident. Esse tempora, voluptate ut doloremque odit optio id nostrum nam rerum! Culpa nobis maiores, mollitia voluptate ducimus consequatur voluptates corporis, magni sapiente, in dignissimos nemo aperiam!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam,
+            error dolor consequuntur ullam eveniet recusandae hic fuga. Odit
+            dicta velit veritatis a eligendi culpa officiis quasi beatae,
+            dolorem at, quae cum corporis non esse. Neque adipisci praesentium,
+            culpa inventore vero blanditiis commodi in impedit possimus tempora?
+            Hic, dolore fugit, illo cumque deserunt quasi inventore incidunt
+            minus accusamus pariatur minima sunt iste iure. Quaerat quibusdam
+            labore veritatis voluptate distinctio enim excepturi a accusamus
+            modi provident. Esse tempora, voluptate ut doloremque odit optio id
+            nostrum nam rerum! Culpa nobis maiores, mollitia voluptate ducimus
+            consequatur voluptates corporis, magni sapiente, in dignissimos nemo
+            aperiam!
           </p>
         </div>
       </div>
