fixed: added pines to section geography

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                 <a href="#" class="dropdown__link"
                   >Мониторинг естественной трещиноватости</a
                 >
-                <a href="#" class="dropdown__link">Мониторинг СВАН</a>
+                <a href="method-svan.html" class="dropdown__link"
+                  >Мониторинг СВАН</a
+                >
               </div>
             </li>
 
@@ -134,9 +136,9 @@
               <img src="img/methods.png" alt="" />
             </div>
             <div class="methods__text-wrapper">
-              <h3 class="methods__text-title">
+              <h4 class="methods__text-title">
                 Мониторинг СЭТ на малых площадях
-              </h3>
+              </h4>
               <p class="methods__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
                 aperiam hic obcaecati quidem debitis magni fugiat provident
@@ -154,9 +156,9 @@
               <img src="img/methods.png" alt="" />
             </div>
             <div class="methods__text-wrapper">
-              <h3 class="methods__text-title">
+              <h4 class="methods__text-title">
                 Мониторинг естественной трещиноватости
-              </h3>
+              </h4>
               <p class="methods__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
                 aperiam hic obcaecati quidem debitis magni fugiat provident
@@ -174,7 +176,7 @@
               <img src="img/methods.png" alt="" />
             </div>
             <div class="methods__text-wrapper">
-              <h3 class="methods__text-title">Мониторинг СВАН</h3>
+              <h4 class="methods__text-title">Мониторинг СВАН</h4>
               <p class="methods__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
                 aperiam hic obcaecati quidem debitis magni fugiat provident
@@ -184,7 +186,8 @@
                 asperiores fugiat corporis deleniti, dolorum eaque saepe quod.
                 Quam, delectus a?
               </p>
-              <a href="#" class="methods__button">Подробнее</a>
+
+              <a class="methods__button" type="submit">Подробнее</a>
             </div>
           </div>
         </div>
@@ -207,9 +210,61 @@
         <h3 class="geography__title">ГЕОГРАФИЯ ДЕЯТЕЛЬНОСТИ</h3>
         <div class="geography-wrapper">
           <img src="img/geography-bg-2.png " alt=" " />
-          <div class="geography__map-container geography__map-container--komi">
+
+          <div
+            class="geography__map-container geography__map-container--yamburg"
+          >
             <div class="geography__map-modal">
-              <h3 class="geography__modal-title">ООО "Газпром"</h3>
+              <h3 class="geography__modal-title">
+                УГРиЛМ ООО "Газпром добыча Ямбург"
+              </h3>
+            </div>
+            <a href="#" class="geography__map-link">
+              <img
+                src="img/geography-map-icon.svg "
+                class="geography__map-icon"
+                alt=" "
+              />
+            </a>
+          </div>
+
+          <div
+            class="geography__map-container geography__map-container--zapolarka"
+          >
+            <div class="geography__map-modal">
+              <h3 class="geography__modal-title">
+                УГРиЛМ ООО "Газпром добыча Ямбург"
+              </h3>
+            </div>
+            <a href="#" class="geography__map-link">
+              <img
+                src="img/geography-map-icon.svg "
+                class="geography__map-icon"
+                alt=" "
+              />
+            </a>
+          </div>
+
+          <div
+            class="geography__map-container geography__map-container--sahalin"
+          >
+            <div class="geography__map-modal">
+              <h3 class="geography__modal-title">ООО "Роснефть"</h3>
+            </div>
+            <a href="#" class="geography__map-link">
+              <img
+                src="img/geography-map-icon.svg "
+                class="geography__map-icon"
+                alt=" "
+              />
+            </a>
+          </div>
+
+          <div
+            class="geography__map-container geography__map-container--tatarstan"
+          >
+            <div class="geography__map-modal">
+              <h3 class="geography__modal-title">ООО "УК Шешмаойл"</h3>
             </div>
             <a href="#" class="geography__map-link">
               <img
@@ -220,10 +275,40 @@
             </a>
           </div>
           <div
-            class="geography__map-container geography__map-container--sahalin"
+            class="geography__map-container geography__map-container--orenburg"
           >
             <div class="geography__map-modal">
-              <h3 class="geography__modal-title">ООО "Роснефть"</h3>
+              <h3 class="geography__modal-title">ООО "Байтекс"</h3>
+            </div>
+            <a href="#" class="geography__map-link">
+              <img
+                src="img/geography-map-icon.svg "
+                class="geography__map-icon"
+                alt=" "
+              />
+            </a>
+          </div>
+
+          <div
+            class="geography__map-container geography__map-container--samara"
+          >
+            <div class="geography__map-modal">
+              <h3 class="geography__modal-title">ООО "Резонанс"</h3>
+            </div>
+            <a href="#" class="geography__map-link">
+              <img
+                src="img/geography-map-icon.svg "
+                class="geography__map-icon"
+                alt=" "
+              />
+            </a>
+          </div>
+
+          <div
+            class="geography__map-container geography__map-container--neneckiy"
+          >
+            <div class="geography__map-modal">
+              <h3 class="geography__modal-title">ООО "ЛУКОЙЛ-Коми"</h3>
             </div>
             <a href="#" class="geography__map-link">
               <img
